// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoProject /> should render properly with more than one organization 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #252525;
  margin-top: 32px;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  color: #6088FE;
  font-size: 32px;
  line-height: 43px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 28px;
  line-height: 37px;
  font-weight: 400;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 32px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited,
.emotion-4 .noop {
  background-color: #3A5DFF;
}

.emotion-4:hover,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-4[aria-disabled=true],
.emotion-4 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <svg
    data-file-name="rocket.svg"
    height={210}
  />
  <h2
    className="emotion-1"
  >
    Welcome to Boon AI!
  </h2>
  <h3
    className="emotion-2"
  >
    To get started select your organization and create a new project.
  </h3>
  <div
    className="emotion-3"
  >
    <a
      className="emotion-4"
      href="/organizations"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Select Organization
    </a>
  </div>
</div>
`;

exports[`<NoProject /> should render properly with no organization 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #252525;
  margin-top: 32px;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  color: #6088FE;
  font-size: 32px;
  line-height: 43px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 28px;
  line-height: 37px;
  font-weight: 400;
  padding-top: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  color: #b3b3b3;
  font-size: 18px;
  line-height: 21px;
}

<div
  className="emotion-0"
>
  <svg
    data-file-name="rocket.svg"
    height={210}
  />
  <h2
    className="emotion-1"
  >
    Welcome to Boon AI!
  </h2>
  <h3
    className="emotion-2"
  >
    To get started you will need to be added to a project.
  </h3>
  <div
    className="emotion-3"
  >
    Request project access from your administrator.
  </div>
</div>
`;

exports[`<NoProject /> should render properly with one organization 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #252525;
  margin-top: 32px;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  color: #6088FE;
  font-size: 32px;
  line-height: 43px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 28px;
  line-height: 37px;
  font-weight: 400;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 32px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited,
.emotion-4 .noop {
  background-color: #3A5DFF;
}

.emotion-4:hover,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-4[aria-disabled=true],
.emotion-4 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <svg
    data-file-name="rocket.svg"
    height={210}
  />
  <h2
    className="emotion-1"
  >
    Welcome to Boon AI!
  </h2>
  <h3
    className="emotion-2"
  >
    Create a new project to get started.
  </h3>
  <div
    className="emotion-3"
  >
    <a
      className="emotion-4"
      href="/organizations/42869703-fb62-4988-a0d1-e59b15caff06/projects/add"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Create a New Project
    </a>
  </div>
</div>
`;
